# SkyPro_27.2_HW

./: README.md  config.py  db.sqlite3  manage.py  pyproject.toml
SkyPro_27_HW/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  urls_ads.py  urls_categories.py  views.py
ads/migrations/: 0001_initial.py  0002_category.py
categories/: views.py
categories/migrations/: 0001_initial.py
