[tool.poetry]
name = "skypro-27-hw"
version = "0.1.0"
description = ""
authors = ["vvvadim <v.vladimirov@it-park.tech>"]
readme = "README.md"
packages = [{include = "skypro_27_hw"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
